# plc-demo-helper

./: README.md
plc_framework/: README.md  pyproject.toml
plc_framework/src/plc_framework/: crew.py  main.py
plc_framework/src/plc_framework/config/: agents.yaml  tasks.yaml
